--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,37 +1,52 @@
-.flex-wrapper {
+.home-flex-wrapper {
     display:flex;
     justify-content:center;
     align-items:center;
     height:100vh;
-    padding:1rem;
 }
 
-.flex-container {
+.home-flex-container {
+    display:flex;
+    flex-direction:row;
+    width:90%;
+    height:auto;
+    margin:0 auto;
+    justify-content:center;
+}
+
+.home-grid-container {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-auto-rows:700px;
+  gap:100px;
+}
+
+.card {
     display:flex;
     flex-direction:column;
-    justify-content: center;
-    align-items: center;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap:50px;  
-}
-
-.card-1,
-.card-2,
-.card-3 {
-    width:500px;
-    height:600px;
+    justify-content:center;
+    align-items:center;
+    height:100%;
+    width:100%;
     border-radius:8px;
 }
+
 .card-1 {
-    background-color: blue;
 }
 .card-2 {
-    background-color: green;
 }
 .card-3 {
-    background-color:red;
+}
+
+.card-1,.card-2,.card-3 {
+    background-color: aliceblue;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+}
+
+.img1 {
+    width:50%;
 }
