--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@ html,body {
     padding:0;
     font-size: 16px;
     font-family: Arial, sans-serif;
-    background-color:whitesmoke;
+    background-color:rgb(20, 20, 20);
   }
 
 .site {
