--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -6,7 +6,7 @@
   background-color: rgba(36, 36, 36, 1);
   color: white;
   width: 100vw;
-  height:fit-content;
+  height:auto;
 }
 
 .footer-contact {
