--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -66,7 +66,17 @@ gap:20px;
     box-shadow: inset 0 0 20px rgba(99, 99, 99, 0.65);
 }
 
+.info-box-3 {
+display:flex;
+flex-direction:row;
+gap:10px;
+}
 
+.info-box-skill-icon {
+    width:50px;
+    height:50px;
+    margin-top:50px;
+}
 
 .info-box-header {
     display:flex;
@@ -84,14 +94,14 @@ gap:20px;
 .info-box-image {
     display:flex;
     position:absolute;
-    transform:translate(-50px,-50px);
-    width:100px;
-    height:100px;
-    z-index:1;
+    width:150px;
+    height:150px;
+    left:-100px;
+    top:-100px;
 }
 
-.info-box-container-1 {margin-top:100px;}
-.info-box-container-2 {transform: translate(100px)}
-.info-box-container-3 {transform: translate(-100px)}
-.info-box-container-4 {transform: translate(100px)}
-.info-box-container-5 {transform: translate(-100px);margin-bottom:100px;}
+.info-box-container-1 {margin-top:100px;margin-left:150px;}
+.info-box-container-2 {margin-left:-125px;}
+.info-box-container-3 {margin-left:150px;}
+.info-box-container-4 {margin-left:-125px;}
+.info-box-container-5 {margin-left:150px;margin-bottom:100px;}
