--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -14,24 +14,52 @@
 
 .portfolio-filter-box {
     display:flex;
-    gap:100px;
+    position:relative;
     flex-direction:column;
-    height:fit-content;
-    flex-direction:column;
-    align-items:center;
     margin-top:100px;
-    height:500px;
-    width:500px;
+    margin-bottom:100px;
+    width:fit-content;
+    height:fit-content;
+    padding:20px;
     border:1px solid black;
     box-shadow: inset 0 0 20px rgba(99, 99, 99, 0.65);
     background-color:whitesmoke;
 }
 
-.portfolio-name-filter-input {
-    margin-top:200px;
+.portfolio-filter-box-image {
+    display:flex;
+    position:absolute;
+    left:-30px;
+    top:-20px;
+    width:50px;
+    height:50px;
 }
 
+.portfolio-setfilter-button {
+    position:absolute;
+    left:50px;
+    bottom:-10px;
+    font-size:16px;
+}
+.portfolio-clearfilter-button {
+    position:absolute;
+    right:50px;
+    bottom:-10px;
+    font-size:16px;
+}
+.portfolio-filter-box form {
+    display:flex;
+    flex-direction:column;
+    gap:10px;
+    align-items:center;
+}
 
+.portfolio-name-filter-input {
+    width:250px;
+    height:30px;
+    text-align:center;
+    font-size:16px;
+}
 .portfolio-project-list-box {
 
 }
