--- a/src/styles/Portfolio/Filter.css
+++ b/src/styles/Portfolio/Filter.css
@@ -1,29 +1,16 @@
-.portfolio-flex-container {
-    display:flex;
-    height:fit-content;
-    flex-direction:column;
-    align-items:center;
-    width:90%;
-    margin:0 auto;
-    background-color:white;
-    margin-top:200px;
-    gap:20px;
-    box-shadow: inset 0 0 20px rgb(0, 0, 0);
-    border-radius:10px;
-}
 
 .portfolio-filter-box {
     display:flex;
     position:relative;
     flex-direction:column;
-    margin-top:100px;
-    margin-bottom:100px;
     width:fit-content;
     height:fit-content;
     padding:20px;
     border:1px solid black;
     box-shadow: inset 0 0 20px rgba(99, 99, 99, 0.65);
     background-color:whitesmoke;
+    grid-column: 1;
+    grid-row:1;
 }
 
 .portfolio-filter-box-image {
@@ -59,11 +46,4 @@
     height:30px;
     text-align:center;
     font-size:16px;
-}
-.portfolio-project-list-box {
-
-}
-
-.portfolio-project-preview-box {
-
 }
