--- a/src/styles/Portfolio/Portfolio.css
+++ b/src/styles/Portfolio/Portfolio.css
@@ -14,6 +14,7 @@
 
 .portfolio-grid-container {
   display: grid;
+  justify-items:center;
   grid-template-columns: 1fr 1fr;
   grid-template-rows:1fr 1fr;
   margin:100px;
