separated to frontend and backend

--- a/frontend/src/styles/Portfolio/List.css
+++ b/frontend/src/styles/Portfolio/List.css
@@ -23,7 +23,9 @@
     gap:10px;
 }
 
-.test {
+.portfolio-list-item {
+    display:flex;
+    align-items:center;
     width:500px;
     margin:20px;
     height:100px;
