develping portfolio continues

--- a/frontend/src/styles/Portfolio/List.css
+++ b/frontend/src/styles/Portfolio/List.css
@@ -30,4 +30,9 @@
     margin:20px;
     height:100px;
     border:1px solid black;
+    cursor:pointer;
+}
+
+.portfolio-list-item:hover{
+    border-color:red;
 }
