--- a/frontend/src/styles/Portfolio/Preview.css
+++ b/frontend/src/styles/Portfolio/Preview.css
@@ -17,13 +17,10 @@
     display:flex;
     flex-direction:column;
     border:1px solid black;
-    align-items:center;
     width:600px;
     height:100%;
-    flex-wrap:wrap;
     overflow-y: scroll;
     overflow-x: hidden;
-    gap:20px;
 }
 
 .portfolio-preview-image {
@@ -32,8 +29,18 @@
     background-color: rgb(197, 197, 197);
 }
 
+.portfolio-preview-item {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    width:100%;
+    height:fit-content;
+    gap:10px;
+}
+
 .portfolio-preview-header {
     text-decoration:underline;
+    font-size:21px;
 }
 
 .portfolio-preview-text {
